# SPHARM-PDM

./: .clang-format  CMakeLists.txt  CMakeLists.txt~  CTestConfig.cmake  Common.cmake  License.txt  README.md  SPHARM-PDM.cmake  SuperBuild.cmake  cppcheck.sh  spharm-pdm.cmake
Applications/: CMakeLists.txt
Applications/CreateMRML/: CMakeLists.txt  CreateMRML.cxx  CreateMRMLSceneHelper.cxx  CreateMRMLSceneHelper.h  MRMLColorableHelper.cxx  MRMLColorableHelper.h  MRMLFiducialHelper.cxx  MRMLFiducialHelper.h  MRMLModelHelper.h  MRMLNodeHelper.h  MRMLTransformHelper.h  MRMLVolumeHelper.h  MagicParser.cxx  MagicParser.h
Applications/GenParaMeshCLP/: CMakeLists.txt  GenParaMeshCLP.cxx  GenParaMeshCLP.h  GenParaMeshCLP.xml  itkMeshTovtkPolyData.h
Applications/ImageMath/: CMakeLists.txt  CropImage.cxx  ImageMath.cxx  ImageMath.h  ImageMath_b.cxx
Applications/MeshMath/: CMakeLists.txt  MeshMath.cxx  argio.hh  itkMeshToVTKPolyDataFilter.h  itkMeshTovtkPolyData.cxx
Applications/MetaMeshTools/: BYU2VTK.cxx  CMakeLists.txt  MeshMath.cxx  Meta2STL.cxx  Meta2VTK.cxx  STL2Meta.cxx  STL2VTK.cxx  VTK2Meta.cxx  argio.hh  asc2meta.cxx  itkMeshToVTKPolyDataFilter.cxx  itkMeshToVTKPolyDataFilter.h  itkMeshTovtkPolyData.cxx  itkMeshTovtkPolyData.h  vtkPolyDataToitkMesh.cxx  vtkPolyDataToitkMesh.h
Applications/ParaToSPHARMMeshCLP/: CMakeLists.txt  ParaToSPHARMMeshCLP.cxx  ParaToSPHARMMeshCLP.xml  SphericalHarmonicMedialAxisMeshSource.cxx  SphericalHarmonicMedialAxisMeshSource.h  argio.h  itkMeshTovtkPolyData.cxx  itkMeshTovtkPolyData.h  vtkPolyDataToitkMesh.cxx  vtkPolyDataToitkMesh.h
Applications/ParticleModule/: CMakeLists.txt  ParticleModule.xml  ParticleModuleCLP.cxx  ParticleModuleComputation.cxx  ParticleModuleComputation.h  ParticleModuleParameters.cxx  ParticleModuleParameters.h  main.cxx
Applications/RadiusToMesh/: CMakeLists.txt  RadiusToMesh.cxx  RadiusToMesh.xml
Applications/SegPostProcessCLP/: CMakeLists.txt  SegPostProcessCLP.cxx  SegPostProcessCLP.xml  argio.h
Applications/ShapeAnalysisModule/: CMakeLists.txt  Parameters.cxx  Parameters.h  ShapeAnalysisModule.xml  ShapeAnalysisModuleCLP.cxx  ShapeAnalysisModuleComputation.cxx  ShapeAnalysisModuleComputation.h
Applications/ShapeAnalysisModule/BacthMake_Application/: GenusZeroImageFilter.bmm  OrientImage.bmm  ParaToSPHARMMesh.bmm  ParaToSPHARMMeshCLP.bmm  RegisterImages.bmm  SegPostProcessCLP.bmm  bmGridSend.bmm  itkEMSCLP.bmm
Applications/SpharmTool/: CMakeLists.txt
Applications/StatNonParamTestPDM/: CMakeLists.txt  MANCOVA.cxx  MANCOVA.h  argio.h  computeStatPDM.cxx  computeStatPDM.h  computeStatPDM_vector.cxx  constants.h  createPerm.cxx  createPerm.h  itkMeshTovtkPolyData.cxx  itkMeshTovtkPolyData.h  main.cxx  miscMANCOVA.cxx  miscMANCOVA.h  newTypes.h  nonMANCOVA.cxx  nonMANCOVA.h  shapeAnalysisMANCOVA.cxx  shapeAnalysisMANCOVA.xml  shapeAnalysisMANCOVACLP.h  vtkPolyDataToitkMesh.h
Applications/shapeAnalysisMANCOVA_Wizard/: CMakeLists.txt  main.cxx  shapeAnalysisMANCOVA_Wizard.cxx  shapeAnalysisMANCOVA_Wizard.h  shapeAnalysisMANCOVA_Wizard.ui  shapeAnalysisMANCOVA_Wizard.xml
CommandLineTool/: CMakeLists.txt  SPHARM-PDM-parameters.ini  SPHARM-PDM.py
Libraries/Shape/: CMakeLists.txt
Libraries/Shape/Algorithms/: BinaryMask3DEqualAreaParametricMeshSource.cxx  BinaryMask3DEqualAreaParametricMeshSource.h  BinaryMask3DEqualAreaParametricMeshSource.txx  CMakeLists.txt  EqualAreaParametricMeshNewtonIterator.cxx  EqualAreaParametricMeshNewtonIterator.h  ParametricMeshToSPHARMSpatialObjectFilter.cxx  ParametricMeshToSPHARMSpatialObjectFilter.h  SphericalHarmonicMedialAxisMeshSource.cxx  SphericalHarmonicMedialAxisMeshSource.h  SphericalHarmonicMeshSource.cxx  SphericalHarmonicMeshSource.h  TSurfaceNet.cxx  TSurfaceNet.h  TVoxelVolume.cxx  TVoxelVolume.h  atan2.py  f2c.h  itkMesh3DProcrustesAlignFilter.h  itkMesh3DProcrustesAlignFilter.txx
Libraries/Shape/IO/: CMakeLists.txt  SphericalHarmonicCoefficientFileReader.cxx  SphericalHarmonicCoefficientFileReader.h  SphericalHarmonicCoefficientFileWriter.cxx  SphericalHarmonicCoefficientFileWriter.h
Libraries/Shape/Numerics/: CMakeLists.txt  SphericalHarmonicPolynomial.h  SphericalHarmonicPolynomial.txx
Libraries/Shape/SpatialObject/: AttributeMeshSpatialObject.h  AttributeMeshSpatialObject.txx  CMakeLists.txt  SphericalHarmonicSpatialObject.cxx  SphericalHarmonicSpatialObject.h
Libraries/Shape/Statistics/: CMakeLists.txt  itkSampleFalseDiscoveryRateCorrectionFilter.h  itkSampleFalseDiscoveryRateCorrectionFilter.txx
Libraries/SparseLibMVIml/: CMakeLists.txt  README  bicg.h  bicgstab.h  cg.h  cgs.h  cheby.h  compcol_double.cxx  compcol_double.h  comprow_double.cxx  comprow_double.h  coord_double.cxx  coord_double.h  diagpre_double.cxx  diagpre_double.h  gmres.h  icpre_double.cxx  icpre_double.h  ilupre_double.cxx  ilupre_double.h  iohb.h  iohb_double.cxx  iohb_double.h  iotext.h  iotext_double.cxx  iotext_double.h  iotext_type.h  ir.h  makefile.def  minstr.h  mvblas.h  mvblasc.cxx  mvblasc.h  mvblasd.cxx  mvblasd.h  mvblasf.cxx  mvblasf.h  mvblasi.cxx  mvblasi.h  mvconfig.h  (+37 more)
Modules/CLI/: CMakeLists.txt
Modules/CLI/GenParaMeshCLP/: CMakeLists.txt  GenParaMeshCLP.cxx  GenParaMeshCLP.h  GenParaMeshCLP.xml  itkMeshTovtkPolyData.cxx  itkMeshTovtkPolyData.h  vtkPolyDataToitkMesh.cxx  vtkPolyDataToitkMesh.h
Modules/CLI/MetaMeshTools/: BYU2VTK.cxx  CMakeLists.txt  MeshMath.cxx  (+12 more)
ShapeAnalysisModule/: CMakeLists.txt  Parameters.cxx  Parameters.h  ShapeAnalysisModule.xml  ShapeAnalysisModuleCLP.cxx  ShapeAnalysisModuleComputation.cxx
ShapeAnalysisModule/BatchMake_Application/: GenParaMeshCLP.bmm  ParaToSPHARMMeshCLP.bmm
ShapeAnalysisModule/SegPostProcess/: SegPostProcess.cxx  SegPostProcessCLP.cxx
Testing/: CMakeLists.txt  itkImageIOFactoryRegisterManager.h  itkTest.cxx  itkTestMain.h  itkTransformIOFactoryRegisterManager.h  testcomparevtk.cxx  vtkTest.cxx  vtkTestMain.h
Testing/Data/: InputImageTest.nrrd  InputImageTestForGen.nrrd  OutputImageTestToCompare.nrrd  OutputImageToCompareGenParaMeshCLP_para.vtk  OutputImageToCompareGenParaMeshCLP_surf.vtk
(+84 files in other folders)
